# pixelflut_client

./: .gitignore  Cargo.toml  rustc-ice-2025-02-12T22_49_48-546896.txt  rustc-ice-2025-02-12T22_49_48-546897.txt  rustc-ice-2025-02-12T22_50_41-547253.txt  rustc-ice-2025-02-12T22_50_41-547254.txt
.src/: cmd_fill.rs  main.rs  pixelflut.rs
pixelflut_base/: Cargo.toml
pixelflut_gstreamer/: Cargo.toml
pixelflut_gstreamer/src/: blit_image.rs  lib.rs  pixelflut_builder.rs  pixelflut_gstreamer.rs
